--- a/ScroogeCoin/ScroogeCoin.csproj
+++ b/ScroogeCoin/ScroogeCoin.csproj
@@ -43,17 +43,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bytes.cs" />
     <Compile Include="Coin.cs" />
     <Compile Include="Global.cs" />
     <Compile Include="Hash.cs" />
     <Compile Include="IAuthoritySignedTrans.cs" />
+    <Compile Include="IDestinyInfo.cs" />
+    <Compile Include="IOrigin.cs" />
+    <Compile Include="IOriginInfo.cs" />
     <Compile Include="ISerializedTransfer.cs" />
     <Compile Include="ITransfer.cs" />
     <Compile Include="ITransferHash.cs" />
     <Compile Include="IUserSignedTrans.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Serialize.cs" />
+    <Compile Include="SerializedITransferHash.cs" />
+    <Compile Include="SerializedTransfer.cs" />
+    <Compile Include="Serialized.cs" />
     <Compile Include="Signature.cs" />
     <Compile Include="SignedTrans.cs" />
     <Compile Include="Transfer.cs" />
